# transformational

./: README.md  audit_velocity_shards.py  infer_velocity.py  preprocessing2.py  pyproject.toml  requirements.txt  train_velocity.py
job_examples/: train_velocity_condor.sh  train_velocity_example.sub  train_velocity_job_example.sh
velocity_transformer/: __init__.py  data_utils.py  dataset.py  midi_bridge.py  model.py  training_utils.py  vocab.py
